[package]
name = "muscovite"
version = "0.1.0"
authors = ["zmird"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7.2"
log = "0.4.8"
log4rs = "0.12.0"
chrono = "0.4.11"
